--- a/metal.desktop
+++ b/metal.desktop
@@ -6,8 +6,8 @@ Comment=Rock out to some Metal!
 Comment[en_CA]=Rock out to some Metal!
 Comment[en_GB]=Rock out to some Metal!
 Comment[id]=Rock out to some Metal!
-TryExec=metal.py
-Exec=metal.py %F
+TryExec=metal
+Exec=metal %F
 Terminal=true
 Type=Application
 Keywords=Music;Audio;Metal
